# reservation-manager

./: CMakeLists.txt  data_operations.c  lista.h  lista_manipulation.c  main  main.c  main_functions.c  reservas_info.txt  security.c
data/: reservas_info.txt
include/: date.h  lista.h  main.h  security.h
src/: data_operations.c  lista_manipulation.c  main  main.c  main_functions.c  reservas_info.txt  security.c
